- Movies
	- Moved Movie section scaning away from native Python, and back to the Plex framework.
	  This means less impact on the Plex Media Server while exporting a Movie section, since we now process
	  items in chunks of 20
	- Movie related stuff now in it's own file, making is a tad more easy to digest when coding
	- Speed has been improved
- TV-Shows
	- Moved TV section scaning away from native Python, and back to the Plex framework.
	  This means less impact on the Plex Media Server while exporting a Movie section, since we now process
	  items in chunks of 5
	- TV related stuff now in it's own file, making is a tad more easy to digest when coding
	- Speed has been improved
- Audio
	- Moved Audio related code into it's own file, making coding more easy to digest
	- ToDo: Start to use Plex FramWork again

V0.0.2.7:
- Fixed issue with TV-Series in Extreme 2 level multiplied
- Started to reorganize code into sub files, making development a tad more easy

V0.0.2.6:
- Added new export level to Movies, called "Extreme 3"
  - Allows export of the path where metadata is stored, like subtitles
- Added new export level to TV-Shows, called "Extreme 2"
  - Allows export of the path where metadata is stored, like subtitles

V0.0.2.5:
- Added export of Audio Language for movies and TV-Shows
- Added export of Subtitle Language for movies and TV-Shows
*** Above was made by a new lost soul here......CCarpo

V0.0.2.4:
- Fixed issue with some requests having token in the url, instead of in the header
- Added Simple and basic mode to Music sections

V0.0.2.3:
- Added posibillity to reset the local cached token from prefs, if user deletes the Plex2CSV from the device list

V0.0.2.2:
- Added export of labels for Movies in basic mode
	ToDO: get it for TV-Shows as well
- Added support for the new fancy Home mode
	Note: If using Home mode, then you must configure Plex2CSV in the settings to authenticate towards plex.tv

V0.0.2.1: